<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    >
    <item android:title="@string/text_resurse_menu_5">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/text_resurse_menu_1"
                    android:id="@+id/text_resurse_menu_1"
                    android:icon="@drawable/ic_resurse_menu_1"/>

                <item android:title="@string/text_resurse_menu_2"
                    android:id="@+id/text_resurse_menu_2"
                    android:icon="@drawable/ic_resurse_menu_2"/>

                <item android:title="@string/text_resurse_menu_3"
                    android:id="@+id/text_resurse_menu_3"
                    android:icon="@drawable/ic_resurse_menu_3"/>

                <item android:title="@string/text_resurse_menu_4"
                    android:id="@+id/text_resurse_menu_4"
                    android:icon="@drawable/ic_resurse_menu_4"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/text_resurse_menu_6">
        <menu>
            <item android:title="@string/text_resurse_menu_1"
                android:id="@+id/text_resurse_menu_11"
                android:icon="@drawable/ic_resurse_menu_1"/>

            <item android:title="@string/text_resurse_menu_2"
                android:id="@+id/text_resurse_menu_21"
                android:icon="@drawable/ic_resurse_menu_2"/>

            <item android:title="@string/text_resurse_menu_3"
                android:id="@+id/text_resurse_menu_31"
                android:icon="@drawable/ic_resurse_menu_3"/>

            <item android:title="@string/text_resurse_menu_4"
                android:id="@+id/text_resurse_menu_41"
                android:icon="@drawable/ic_resurse_menu_4"/>
        </menu>
    </item>

</menu>